Add second feature test for restaurants

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,2 +1,12 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
 No restaurants yet
 <a href='#'>Add a restaurant</a>
+  <body>
+    
+  </body>
+</html>
