GREEN: Passed feature test for editing restaurants

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -18,4 +18,5 @@
   <%= @restaurant.description %>
 </p>
 
+<%= link_to 'Edit', edit_restaurant_path(@restaurant) %>
 <%= link_to 'Back to Restaurants', restaurants_path %>
