--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -16,6 +16,7 @@
       <td><%= restaurant.address %></td>
       <td><%= restaurant.description %></td>
       <td><%= link_to 'Show', restaurant_path(restaurant) %></td>
+      <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
     </tr>
     <% end %>
   </table>
