--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,4 +2,4 @@
 <br>
 <h2 style="text-align: center"> Crowd-sourced reviews about local businesses </h2>
 
-<%= link_to 'Yelpz Businesses', controller: 'restaurants'%>
+<p style="text-align: center"><%= link_to 'Yelpz Businesses', controller: 'restaurants'%></p>
