--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -14,8 +14,8 @@
 </p>
 
 <p>
-  <strong>Rating:</strong>
-  <%= @restaurant.rating %>
+  <strong>Average Rating:</strong>
+  <%= @restaurant.average_rating %>
 </p>
 
 <%= link_to 'Edit', edit_restaurant_path(@restaurant) %><br>
