--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,7 +20,7 @@
 
 <%= link_to 'Edit', edit_restaurant_path(@restaurant) %><br>
 <%= link_to "Add review", new_restaurant_review_path(@restaurant) %><br>
-<%= link_to 'Back to Restaurants', restaurants_path %><br><br>
+<!-- <%= link_to 'Back to Restaurants', restaurants_path %><br><br> -->
 
 <h2>Reviews</h2>
 <%= render @restaurant.reviews %>
