--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -11,14 +11,14 @@
 
     <% @restaurants.each do |restaurant| %>
     <tr>
-      <td><%= restaurant.name %></td>
+      <td><%= link_to restaurant.name, restaurant_path(restaurant) %></td>
       <td><%= restaurant.address %></td>
       <td><%= restaurant.description %></td>
       <td><%= restaurant.average_rating %></td>
       <td><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %></td>
-      <td><%= link_to 'Show', restaurant_path(restaurant) %></td>
-      <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
-      <td><%= link_to 'Delete', restaurant_path(restaurant),
+      <!-- <td><%= link_to 'Show', restaurant_path(restaurant) %></td> -->
+      <td><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></td>
+      <td><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant),
               method: :delete,
               data: { confirm: 'Are you sure you want to delete such an amazing restaurant?' } %></td>
     </tr>
@@ -27,7 +27,3 @@
 <%else%>
 No restaurants yet
 <%end%>
-
-  <p>
-    <%= link_to 'Add a restaurant', new_restaurant_path %>
-  </p>
