--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -18,8 +18,11 @@
   <%= @restaurant.average_rating %>
 </p>
 
-<% if (current_user.id == @restaurant.user.id)%>
-  <%= link_to "Edit #{@restaurant.name}", edit_restaurant_path(@restaurant) %><br>
+<% if (current_user && current_user.id == @restaurant.user_id)%>
+  <%= link_to "Edit #{@restaurant.name}", edit_restaurant_path(@restaurant) %><br></p>
+  <%= link_to "Delete #{@restaurant.name}", restaurant_path(@restaurant),
+          method: :delete,
+          data: { confirm: 'Are you sure you want to delete such an amazing restaurant?' } %><br></p>
 <% end %>
 <%= link_to "Add review", new_restaurant_review_path(@restaurant) %><br>
 <!-- <%= link_to 'Back to Restaurants', restaurants_path %><br><br> -->
