--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @restaurant, local: true do |form| %>
+<%= form_for @restaurant, html: { multipart: true } do |form| %>
 
 <% if @restaurant.errors.any? %>
   <div id="error_explanation">
@@ -14,6 +14,11 @@
     </ul>
   </div>
 <% end %>
+
+<p>
+  <%= form.label :image %><br>
+  <%= form.file_field :image %>
+</p>
 
 <p>
   <%= form.label :name %><br>
