--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -18,6 +18,10 @@
   <%= @restaurant.average_rating %>
 </p>
 
+<p>
+  <%= image_tag @restaurant.image.url(:large) %>
+</p>
+
 <% if (current_user && current_user.id == @restaurant.user_id)%>
   <%= link_to "Edit #{@restaurant.name}", edit_restaurant_path(@restaurant) %><br></p>
   <%= link_to "Delete #{@restaurant.name}", restaurant_path(@restaurant),
