--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -18,9 +18,9 @@
   <%= @restaurant.average_rating %>
 </p>
 
-<!-- <div class="restaurant-image">
+<div class="restaurant-image">
   <%= image_tag(@image_url) %>
-</div> -->
+</div>
 
 
 <% if (current_user && current_user.id == @restaurant.user_id)%>
