--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -15,28 +15,37 @@
   </div>
 <% end %>
 
-<p>
-  <%= form.label :image %><br>
-  <%= form.file_field :image %>
-</p>
+<div class="form-group row">
+  <label for="name" class="col-xs-2 col-form-label"><%= form.label :name %></label>
+  <div class="col-xs-10" id="name">
+    <%= form.text_field(:name, class: "form-control", placeholder: "Add name here") %>
+  </div>
+</div>
 
-<p>
-  <%= form.label :name %><br>
-  <%= form.text_field :name %>
-</p>
+<div class="form-group row">
+  <label for="address" class="col-xs-2 col-form-label"><%= form.label :address %></label>
+  <div class="col-xs-10" id="address">
+    <%= form.text_field(:address, class: "form-control", placeholder: "Add address here") %>
+  </div>
+</div>
 
-<p>
-  <%= form.label :address %><br>
-  <%= form.text_field :address %>
-</p>
+<div class="form-group row">
+  <label for="description" class="col-xs-2 col-form-label"><%= form.label :description %></label>
+  <div class="col-xs-10" id="description">
+    <%= form.text_area(:description, rows: 5, class: "form-control", placeholder: "Add your description here") %>
+  </div>
+</div>
 
-<p>
-  <%= form.label :description %><br>
-  <%= form.text_area :description %>
-</p>
 
-<p>
-  <%= form.submit %>
-</p>
+<div class="form-group row">
 
+  <div class="col-xs-10" id="description">
+      <%= form.label :image %><br>
+      <%= form.file_field :image %>
+  </div>
+</div>
+
+
+<%= form.submit(class: "btn btn-primary") %>
+<%= link_to "Cancel", restaurants_path %>
 <% end %>
