--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,5 +1,6 @@
-<h1>Add a new restaurant</h1>
+<div class="container">
+  <h1>Add a new restaurant</h1>
 
-    <%= render 'form' %>
-
+     <%= render 'form' %>
+</div>
 <!-- <%= link_to 'Back to Restaurants', restaurants_path %> -->
